3/bisonfinal.output
Terminals unused in grammar

   COLON
   INTEGER_LITERAL


Grammar

    0 $accept: grammar_start $end

    1 grammar_start: stmtlist

    2 stmtlist: stmt stmtlist
    3         | %empty

    4 stmt: IF LP exprc rp LCP stmtlist RCP elsestmt
    5     | WHILE LP exprc rp LCP stmtlist RCP
    6     | FOR LP exprfor rp LCP stmtlist RCP
    7     | SWITCH LP arithexpr rp switchstmt
    8     | expression semi

    9 elsestmt: ELSEIF LP exprc rp LCP stmtlist RCP elsestmt
   10         | ELSE LCP stmtlist RCP
   11         | %empty

   12 exprc: exprc OR expression A
   13      | exprc AND expression A
   14      | expression A

   15 A: LT expression
   16  | GT expression
   17  | EQEQ expression
   18  | GT EQ expression
   19  | LT EQ expression
   20  | %empty

   21 switchstmt: CASE LP arithexpr rp LCP stmtlist RCP switchstmt
   22           | DEFAULT LCP stmtlist RCP
   23           | %empty

   24 exprfor: expression semi exprc semi expression

   25 expression: RUN LP func_arg_list rp
   26           | SET_JOB_AFFINITY LP func_arg_list rp
   27           | SET_ALGO LP func_arg_list rp
   28           | DISCARD_JOB LP func_arg_list rp
   29           | WAIT LP func_arg_list rp
   30           | init
   31           | mathexpr

   32 init: ID EQ constructor init
   33     | %empty

   34 mathexpr: assignexpr
   35         | arithexpr

   36 assignexpr: ID EQ mathexpr
   37           | ID PLUSEQ mathexpr
   38           | ID MINUSEQ mathexpr
   39           | ID MULTIPLYEQ mathexpr
   40           | ID DIVIDEEQ mathexpr
   41           | ID MINUSMINUS
   42           | ID PLUSPLUS

   43 arithexpr: expr1 BITAND arithexpr
   44          | expr1

   45 expr1: expr2 BITOR expr1
   46      | expr2

   47 expr2: expr2 PLUS expr3
   48      | expr2 MINUS expr3
   49      | expr3

   50 expr3: expr3 MULTIPLY expr4
   51      | expr3 DIVIDE expr4
   52      | expr4

   53 expr4: NOT factor
   54      | factor

   55 factor: NUM
   56       | ID DOT function
   57       | constructor DOT function
   58       | ID
   59       | LP arithexpr rp

   60 constructor: PROCESSOR LP proc_parameter_list rp
   61            | LINK LP link_parameter_list rp
   62            | MEMORY LP memory_parameter_list rp
   63            | JOB LP job_parameter_list rp
   64            | CLUSTER LP cluster_parameter_list rp
   65            | SCHEDULER LP scheduler_parameter_list rp

   66 proc_parameter_list: proc_parameter C

   67 C: COMMA proc_parameter_list
   68  | %empty

   69 link_parameter_list: link_parameter D

   70 D: COMMA link_parameter_list
   71  | %empty

   72 memory_parameter_list: memory_parameter E

   73 E: COMMA memory_parameter_list
   74  | %empty

   75 job_parameter_list: job_parameter F

   76 F: COMMA job_parameter_list
   77  | %empty

   78 cluster_parameter_list: cluster_parameter G

   79 G: COMMA cluster_parameter_list
   80  | %empty

   81 scheduler_parameter_list: scheduler_parameter Z

   82 Z: COMMA scheduler_parameter_list
   83  | %empty

   84 proc_parameter: ARCHITECTURE_TYPE EQ value
   85               | ISA EQ value
   86               | CLOCK_SPEED EQ value
   87               | L1_MEMORY EQ value
   88               | L2_MEMORY EQ value
   89               | NAME EQ value
   90               | argument
   91               | %empty

   92 argument: value
   93         | LSP valuearray rsp

   94 valuearray: value H
   95           | %empty

   96 H: COMMA valuearray
   97  | %empty

   98 link_parameter: START_POINT EQ value
   99               | END_POINT EQ value
  100               | BANDWIDTH EQ value
  101               | CHANNEL_CAPACITY EQ value
  102               | NAME EQ value
  103               | value
  104               | %empty

  105 memory_parameter: MEMORY_TYPE EQ value
  106                 | MEM_SIZE EQ value
  107                 | NAME EQ value
  108                 | value
  109                 | %empty

  110 job_parameter: JOB_ID EQ value
  111              | FLOPS_REQUIRED EQ value
  112              | DEADLINE EQ value
  113              | MEM_REQUIRED EQ value
  114              | AFFINITY EQ argument
  115              | argument
  116              | %empty

  117 cluster_parameter: PROCESSORS EQ argument
  118                  | TOPOLOGY EQ value
  119                  | LINK_BANDWIDTH EQ value
  120                  | LINK_CAPACITY EQ value
  121                  | NAME EQ value
  122                  | argument
  123                  | %empty

  124 scheduler_parameter: CLUSTER EQ value
  125                    | JOB_ARRAY EQ argument
  126                    | PROCESSOR_ARRAY EQ argument
  127                    | argument
  128                    | %empty

  129 function: IS_RUNNING LP func_arg_list rp
  130         | SUBMIT_JOBS LP func_arg_list rp
  131         | GET_CLOCK_SPEED LP func_arg_list rp
  132         | GET_AVAILABLE_MEMORY LP func_arg_list rp
  133         | GET_MEMORY LP func_arg_list rp
  134         | GET_LOAD LP func_arg_list rp
  135         | MAX_JOBS LP func_arg_list rp

  136 func_arg_list: argument I
  137              | %empty

  138 I: COMMA func_arg_list
  139  | %empty

  140 value: SQUOTE ID SQUOTE
  141      | DQUOTE ID DQUOTE
  142      | arithexpr
  143      | constructor

  144 semi: SEMI
  145     | error

  146 rp: RP
  147   | error

  148 rsp: RSP
  149    | error


Terminals, with rules where they appear

$end (0) 0
error (256) 145 147 149
IF (258) 4
ELSE (259) 10
WHILE (260) 5
FOR (261) 6
SWITCH (262) 7
CASE (263) 21
DEFAULT (264) 22
LP (265) 4 5 6 7 9 21 25 26 27 28 29 59 60 61 62 63 64 65 129 130 131
    132 133 134 135
RP (266) 146
LCP (267) 4 5 6 9 10 21 22
RCP (268) 4 5 6 9 10 21 22
LSP (269) 93
RSP (270) 148
SEMI (271) 144
COLON (272)
LT (273) 15 19
GT (274) 16 18
EQ (275) 18 19 32 36 84 85 86 87 88 89 98 99 100 101 102 105 106 107
    110 111 112 113 114 117 118 119 120 121 124 125 126
PLUS (276) 47
MINUS (277) 48
MULTIPLY (278) 50
DIVIDE (279) 51
BITOR (280) 45
BITAND (281) 43
NOT (282) 53
ID (283) 32 36 37 38 39 40 41 42 56 58 140 141
NUM (284) 55
DOT (285) 56 57
COMMA (286) 67 70 73 76 79 82 96 138
PROCESSOR (287) 60
LINK (288) 61
MEMORY (289) 62
JOB (290) 63
CLUSTER (291) 64 124
ISA (292) 85
CLOCK_SPEED (293) 86
L1_MEMORY (294) 87
L2_MEMORY (295) 88
NAME (296) 89 102 107 121
START_POINT (297) 98
END_POINT (298) 99
BANDWIDTH (299) 100
CHANNEL_CAPACITY (300) 101
MEMORY_TYPE (301) 105
MEM_SIZE (302) 106
JOB_ID (303) 110
FLOPS_REQUIRED (304) 111
DEADLINE (305) 112
MEM_REQUIRED (306) 113
PROCESSORS (307) 117
TOPOLOGY (308) 118
LINK_BANDWIDTH (309) 119
LINK_CAPACITY (310) 120
IS_RUNNING (311) 129
SUBMIT_JOBS (312) 130
OR (313) 12
AND (314) 13
PLUSEQ (315) 37
MINUSEQ (316) 38
MULTIPLYEQ (317) 39
DIVIDEEQ (318) 40
MINUSMINUS (319) 41
PLUSPLUS (320) 42
GET_CLOCK_SPEED (321) 131
RUN (322) 25
DISCARD_JOB (323) 28
GET_AVAILABLE_MEMORY (324) 132
GET_MEMORY (325) 133
ELSEIF (326) 9
AFFINITY (327) 114
EQEQ (328) 17
DQUOTE (329) 141
SQUOTE (330) 140
ARCHITECTURE_TYPE (331) 84
WAIT (332) 29
SCHEDULER (333) 65
JOB_ARRAY (334) 125
PROCESSOR_ARRAY (335) 126
SET_JOB_AFFINITY (336) 26
MAX_JOBS (337) 135
GET_LOAD (338) 134
SET_ALGO (339) 27
INTEGER_LITERAL (340)


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
grammar_start (87)
    on left: 1, on right: 0
stmtlist (88)
    on left: 2 3, on right: 1 2 4 5 6 9 10 21 22
stmt (89)
    on left: 4 5 6 7 8, on right: 2
elsestmt (90)
    on left: 9 10 11, on right: 4 9
exprc (91)
    on left: 12 13 14, on right: 4 5 9 12 13 24
A (92)
    on left: 15 16 17 18 19 20, on right: 12 13 14
switchstmt (93)
    on left: 21 22 23, on right: 7 21
exprfor (94)
    on left: 24, on right: 6
expression (95)
    on left: 25 26 27 28 29 30 31, on right: 8 12 13 14 15 16 17 18
    19 24
init (96)
    on left: 32 33, on right: 30 32
mathexpr (97)
    on left: 34 35, on right: 31 36 37 38 39 40
assignexpr (98)
    on left: 36 37 38 39 40 41 42, on right: 34
arithexpr (99)
    on left: 43 44, on right: 7 21 35 43 59 142
expr1 (100)
    on left: 45 46, on right: 43 44 45
expr2 (101)
    on left: 47 48 49, on right: 45 46 47 48
expr3 (102)
    on left: 50 51 52, on right: 47 48 49 50 51
expr4 (103)
    on left: 53 54, on right: 50 51 52
factor (104)
    on left: 55 56 57 58 59, on right: 53 54
constructor (105)
    on left: 60 61 62 63 64 65, on right: 32 57 143
proc_parameter_list (106)
    on left: 66, on right: 60 67
C (107)
    on left: 67 68, on right: 66
link_parameter_list (108)
    on left: 69, on right: 61 70
D (109)
    on left: 70 71, on right: 69
memory_parameter_list (110)
    on left: 72, on right: 62 73
E (111)
    on left: 73 74, on right: 72
job_parameter_list (112)
    on left: 75, on right: 63 76
F (113)
    on left: 76 77, on right: 75
cluster_parameter_list (114)
    on left: 78, on right: 64 79
G (115)
    on left: 79 80, on right: 78
scheduler_parameter_list (116)
    on left: 81, on right: 65 82
Z (117)
    on left: 82 83, on right: 81
proc_parameter (118)
    on left: 84 85 86 87 88 89 90 91, on right: 66
argument (119)
    on left: 92 93, on right: 90 114 115 117 122 125 126 127 136
valuearray (120)
    on left: 94 95, on right: 93 96
H (121)
    on left: 96 97, on right: 94
link_parameter (122)
    on left: 98 99 100 101 102 103 104, on right: 69
memory_parameter (123)
    on left: 105 106 107 108 109, on right: 72
job_parameter (124)
    on left: 110 111 112 113 114 115 116, on right: 75
cluster_parameter (125)
    on left: 117 118 119 120 121 122 123, on right: 78
scheduler_parameter (126)
    on left: 124 125 126 127 128, on right: 81
function (127)
    on left: 129 130 131 132 133 134 135, on right: 56 57
func_arg_list (128)
    on left: 136 137, on right: 25 26 27 28 29 129 130 131 132 133
    134 135 138
I (129)
    on left: 138 139, on right: 136
value (130)
    on left: 140 141 142 143, on right: 84 85 86 87 88 89 92 94 98
    99 100 101 102 103 105 106 107 108 110 111 112 113 118 119 120
    121 124
semi (131)
    on left: 144 145, on right: 8 24
rp (132)
    on left: 146 147, on right: 4 5 6 7 9 21 25 26 27 28 29 59 60 61
    62 63 64 65 129 130 131 132 133 134 135
rsp (133)
    on left: 148 149, on right: 93


State 0

    0 $accept: . grammar_start $end

    IF                shift, and go to state 1
    WHILE             shift, and go to state 2
    FOR               shift, and go to state 3
    SWITCH            shift, and go to state 4
    LP                shift, and go to state 5
    NOT               shift, and go to state 6
    ID                shift, and go to state 7
    NUM               shift, and go to state 8
    PROCESSOR         shift, and go to state 9
    LINK              shift, and go to state 10
    MEMORY            shift, and go to state 11
    JOB               shift, and go to state 12
    CLUSTER           shift, and go to state 13
    RUN               shift, and go to state 14
    DISCARD_JOB       shift, and go to state 15
    WAIT              shift, and go to state 16
    SCHEDULER         shift, and go to state 17
    SET_JOB_AFFINITY  shift, and go to state 18
    SET_ALGO          shift, and go to state 19

    $end      reduce using rule 3 (stmtlist)
    $default  reduce using rule 33 (init)

    grammar_start  go to state 20
    stmtlist       go to state 21
    stmt           go to state 22
    expression     go to state 23
    init           go to state 24
    mathexpr       go to state 25
    assignexpr     go to state 26
    arithexpr      go to state 27
    expr1          go to state 28
    expr2          go to state 29
    expr3          go to state 30
    expr4          go to state 31
    factor         go to state 32
    constructor    go to state 33


State 1

    4 stmt: IF . LP exprc rp LCP stmtlist RCP elsestmt

    LP  shift, and go to state 34


State 2

    5 stmt: WHILE . LP exprc rp LCP stmtlist RCP

    LP  shift, and go to state 35


State 3

    6 stmt: FOR . LP exprfor rp LCP stmtlist RCP

    LP  shift, and go to state 36


State 4

    7 stmt: SWITCH . LP arithexpr rp switchstmt

    LP  shift, and go to state 37


State 5

   59 factor: LP . arithexpr rp

    LP         shift, and go to state 5
    NOT        shift, and go to state 6
    ID         shift, and go to state 38
    NUM        shift, and go to state 8
    PROCESSOR  shift, and go to state 9
    LINK       shift, and go to state 10
    MEMORY     shift, and go to state 11
    JOB        shift, and go to state 12
    CLUSTER    shift, and go to state 13
    SCHEDULER  shift, and go to state 17

    arithexpr    go to state 39
    expr1        go to state 28
    expr2        go to state 29
    expr3        go to state 30
    expr4        go to state 31
    factor       go to state 32
    constructor  go to state 33


State 6

   53 expr4: NOT . factor

    LP         shift, and go to state 5
    ID         shift, and go to state 38
    NUM        shift, and go to state 8
    PROCESSOR  shift, and go to state 9
    LINK       shift, and go to state 10
    MEMORY     shift, and go to state 11
    JOB        shift, and go to state 12
    CLUSTER    shift, and go to state 13
    SCHEDULER  shift, and go to state 17

    factor       go to state 40
    constructor  go to state 33


State 7

   32 init: ID . EQ constructor init
   36 assignexpr: ID . EQ mathexpr
   37           | ID . PLUSEQ mathexpr
   38           | ID . MINUSEQ mathexpr
   39           | ID . MULTIPLYEQ mathexpr
   40           | ID . DIVIDEEQ mathexpr
   41           | ID . MINUSMINUS
   42           | ID . PLUSPLUS
   56 factor: ID . DOT function
   58       | ID .

    EQ          shift, and go to state 41
    DOT         shift, and go to state 42
    PLUSEQ      shift, and go to state 43
    MINUSEQ     shift, and go to state 44
    MULTIPLYEQ  shift, and go to state 45
    DIVIDEEQ    shift, and go to state 46
    MINUSMINUS  shift, and go to state 47
    PLUSPLUS    shift, and go to state 48

    $default  reduce using rule 58 (factor)


State 8

   55 factor: NUM .

    $default  reduce using rule 55 (factor)


State 9

   60 constructor: PROCESSOR . LP proc_parameter_list rp

    LP  shift, and go to state 49


State 10

   61 constructor: LINK . LP link_parameter_list rp

    LP  shift, and go to state 50


State 11

   62 constructor: MEMORY . LP memory_parameter_list rp

    LP  shift, and go to state 51


State 12

   63 constructor: JOB . LP job_parameter_list rp

    LP  shift, and go to state 52


State 13

   64 constructor: CLUSTER . LP cluster_parameter_list rp

    LP  shift, and go to state 53


State 14

   25 expression: RUN . LP func_arg_list rp

    LP  shift, and go to state 54


State 15

   28 expression: DISCARD_JOB . LP func_arg_list rp

    LP  shift, and go to state 55


State 16

   29 expression: WAIT . LP func_arg_list rp

    LP  shift, and go to state 56


State 17

   65 constructor: SCHEDULER . LP scheduler_parameter_list rp

    LP  shift, and go to state 57


State 18

   26 expression: SET_JOB_AFFINITY . LP func_arg_list rp

    LP  shift, and go to state 58


State 19

   27 expression: SET_ALGO . LP func_arg_list rp

    LP  shift, and go to state 59


State 20

    0 $accept: grammar_start . $end

    $end  shift, and go to state 60


State 21

    1 grammar_start: stmtlist .

    $default  reduce using rule 1 (grammar_start)


State 22

    2 stmtlist: stmt . stmtlist
